# zed-v

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.bat  build.sh  extension.toml  snippets.json  test.v
extension/: Cargo.toml  build.bat  build.sh  extension.toml  extension.wasm  snippets.json
extension/grammars/: v.wasm
extension/languages/v/: config.toml  folds.scm  highlights.scm  locals.scm  outline.scm  runnables.scm  tasks.json
extension/src/: lib.rs
kernel/: Cargo.toml  README.md  build.rs  install.bat  install.sh
kernel/.cargo/: config.toml
kernel/kernelspec/: kernel.json
kernel/src/: main.rs
languages/v/: brackets.scm  config.toml  debugger.scm  folds.scm  highlights.scm  injections.scm  locals.scm  outline.scm  snippets.json  tags.scm  tasks.json
languages/vmod/: config.toml  highlights.scm
src/: lib.rs
