[package]
name = "v-kernel"
version = "0.1.0"
edition = "2021"
description = "Jupyter kernel for the V programming language"

[[bin]]
name = "v-kernel"
path = "src/main.rs"

[target.x86_64-pc-windows-msvc]
rustflags = ["-l", "advapi32"]

[build-dependencies]

[dependencies]
# ZeroMQ — pure Rust, no libzmq system dependency needed
zmq = "0.10"

# JSON serialisation for Jupyter wire protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HMAC-SHA256 message signing (required by Jupyter wire protocol)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUIDs for message IDs and session IDs
uuid = { version = "1", features = ["v4"] }

# Timestamp for message headers
chrono = { version = "0.4", features = ["clock"] }
